<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Somadan.xyz</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="logout">logout</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_email_verify">EmailVerify</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="toolbar_title">Notes App</string>
    <string-array name="expertise_editText_array">
        <item>Select Expertise</item>
        <item>Electrical</item>
        <item>Plumbin</item>
        <item>Car</item>
        <item>Bike</item>

    </string-array>
</resources>
