<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/picture"
            android:layout_width="200dp"
            android:layout_height="100dp"

            android:drawableLeft="@drawable/picture_icon"
             />

        <Button
            android:id="@+id/nid"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:drawableLeft="@drawable/nid_icon"
          />

    </LinearLayout>

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="100dp"
        android:text="Name"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/rName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_name"

        android:inputType="textPersonName"
        android:padding="20dp">

    </EditText>
</RelativeLayout>

    <Spinner
        android:id="@+id/expertise_editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_margin="10dp"
        android:hint="Expertise"
        android:padding="5dp" />
    <EditText
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:drawableLeft="@drawable/mobile_icon"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="Mobile Number"
        android:inputType="phone"
        android:padding="20dp">

    </EditText>
    <EditText
        android:id="@+id/rEditEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="20dp">

    </EditText>
    <DatePicker
        android:id="@+id/dateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="Date of Birth"
        android:inputType="date"
        android:padding="20dp">
    </DatePicker>
    <EditText
        android:id="@+id/rEditPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="20dp">

    </EditText>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary" />

    <Button
        android:id="@+id/btnLinkToLoginScreen"
        style=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

</LinearLayout>