<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lEditEmail"
            android:hint="@string/hint_email"
            android:text="bijoylabbd@gmail.com"
            android:layout_marginBottom="10dp"
            android:inputType="textEmailAddress"
            android:padding="20dp">
    </EditText>
        <EditText
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lEditPassword"
            android:text="123456"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="20dp">

        </EditText>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:id="@+id/btnLogin"/>

    <Button
        style=""
        android:id="@+id/btnLinkToRegisterScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:text="Register"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp" />

    <Button
        style=""
        android:id="@+id/btnForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Forgot Password"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp" />

</LinearLayout>